<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/band_tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="8dp"
        android:text="@string/default_value"
        android:textAlignment="center"
        android:textSize="24sp" />

    <SearchView
        android:id="@+id/band_search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:iconifiedByDefault="false"
        android:queryHint="@string/search_view">

    </SearchView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/band_bt_scroll_up"
            style="@style/FabScrollUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            tools:ignore="ContentDescription" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/band_rv_member_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="1"
            tools:listitem="@layout/model_band_member">

        </androidx.recyclerview.widget.RecyclerView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/band_fab_tv_abandon"
                style="@style/FabTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_value"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/band_bt_abandon"
                app:layout_constraintEnd_toStartOf="@+id/band_bt_abandon"
                app:layout_constraintTop_toTopOf="@+id/band_bt_abandon" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/band_bt_abandon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:clickable="true"
                android:visibility="invisible"
                app:backgroundTint="@color/lighter_red"
                app:layout_constraintBottom_toTopOf="@+id/band_bt_invitations"
                app:layout_constraintEnd_toEndOf="@+id/band_bt_invitations"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                app:layout_constraintVertical_chainStyle="packed"
                app:srcCompat="@drawable/ic_delete"
                tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/band_fab_tv_invitations"
                style="@style/FabTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/band_fab_band_invitations"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/band_bt_invitations"
                app:layout_constraintEnd_toStartOf="@+id/band_bt_invitations"
                app:layout_constraintTop_toTopOf="@+id/band_bt_invitations" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/band_bt_invitations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:clickable="true"
                android:contentDescription="@string/content_description_bt_band_invitations"
                android:tooltipText="@string/content_description_bt_band_invitations"
                android:visibility="invisible"
                app:backgroundTint="@color/fab_requests"
                app:layout_constraintBottom_toTopOf="@+id/band_bt_add"
                app:layout_constraintEnd_toEndOf="@+id/band_bt_add"
                app:layout_constraintTop_toBottomOf="@+id/band_bt_abandon"
                app:srcCompat="@drawable/ic_mail_outline" />

            <TextView
                android:id="@+id/band_fab_tv_add"
                style="@style/FabTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/band_fab_add"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/band_bt_add"
                app:layout_constraintEnd_toStartOf="@+id/band_bt_add"
                app:layout_constraintTop_toTopOf="@+id/band_bt_add" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/band_bt_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:clickable="true"
                android:contentDescription="@string/content_description_bt_add_band_members"
                android:tooltipText="@string/content_description_bt_add_band_members"
                android:visibility="invisible"
                app:backgroundTint="@color/fab_add"
                app:layout_constraintBottom_toTopOf="@+id/band_bt_options"
                app:layout_constraintEnd_toEndOf="@+id/band_bt_options"
                app:layout_constraintTop_toBottomOf="@+id/band_bt_invitations"
                app:srcCompat="@drawable/ic_group_add" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/band_bt_options"
                style="@style/Widget.Material3.FloatingActionButton.Large.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:contentDescription="@string/content_description_bt_options"
                android:tooltipText="@string/content_description_bt_options"
                app:backgroundTint="@color/fab_options"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/band_bt_add"
                app:srcCompat="@drawable/ic_camera" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/layout_band_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            tools:visibility="gone">

            <Button
                android:id="@+id/band_bt_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:text="@string/band_button_create" />
        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>