<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="social_chats_tab">Chats</string>
    <string name="social_friends_tab">Friends</string>
    <string name="social_band_tab">Band</string>
</resources>