<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="band_button_create">Create A Band</string>
    <string name="band_member_creator">creator</string>
    <string name="band_member_accepted_true">accepted</string>
    <string name="band_member_accepted_false">pending</string>
    <string name="band_add_member_tv">Add New Member</string>
</resources>